Add a logout button to the UI

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,8 @@ block content
     var RULE_BASE_URL = 'https://manage.auth0.com/#/rules/';
     var CLIENT_BASE_URL = 'https://manage.auth0.com/#/applications/';
     var CLIENT_POSTFIX = '/settings';
+  span(class='logoutBtn')
+    a(href='/logout') Logout
   h1 Auth0 Clients and Rules
   div
     ul
